--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -1,53 +1,74 @@
-# i3status config
-
 general {
-        colors = true
-        interval = 5
+	colors = true
+	interval = 2
+	color_good = "#a3be8c"
+	color_degraded = "#d08770"
+	color_bad = "#bf616a"
 }
+
 
 order += "disk /"
 order += "wireless _first_"
+order += "run_watch VPN"
 order += "battery 0"
+order += "cpu_usage"
 order += "load"
+order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+	format_up = "  %quality %essid %ip"
+	format_down = "  down"
 }
 
-ethernet _first_ {
-        # use of %speed requires root privileges
+ethernet eth0 {
+        # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+	integer_battery_capacity = true
+	hide_seconds = true
+	format = "%status %percentage %remaining"
+	threshold_type = "percentage"
+	low_threshold = 10
+	status_bat = "🔋"
+	status_chr = "⚡"
+	status_full = "⚡"
+	status_unk = "?"
 }
 
 run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
+	pidfile = "/var/run/dhclient*.pid"
 }
 
 run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+	pidfile = "/var/run/openvpn-client/*.pid"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "   %Y-%m-%d %H:%M:%S"
+}
+
+cpu_usage {
+	max_threshold = 95
+	degraded_threshold = 80
+	format = "   %usage"
 }
 
 load {
-        format = "%1min"
+	format = " Δ %1min "
+}
+
+volume master {
+	format = "   %volume"
+        format_muted = "   (muted) %volume"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
 
 disk "/" {
-        format = "%avail"
-}
-
-cpu_temperature 0 {
-        format = "T: %degrees °C"
-        max_threshold = 65
-        path = "/sys/class/thermal/thermal_zone0/temp"
+        format = " %avail"
 }
