--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "vim/.vim/pack/my-plugins/start/vim-airline"]
 	path = vim/.vim/pack/my-plugins/start/vim-airline
 	url = https://github.com/vim-airline/vim-airline.git
+[submodule "vim/.vim/pack/my-plugins/start/vim-nerdtree-tabs"]
+	path = vim/.vim/pack/my-plugins/start/vim-nerdtree-tabs
+	url = https://github.com/jistr/vim-nerdtree-tabs.git
+[submodule "vim/.vim/pack/my-plugins/start/vim-nerdtree"]
+	path = vim/.vim/pack/my-plugins/start/vim-nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
