--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,8 +11,8 @@ floating_modifier $mod
 bindsym $mod+Return exec urxvt
 
 # start web browser
-bindsym $mod+F1 exec vivaldi
-bindsym $mod+F2 exec vivaldi --incognito
+bindsym $mod+F1 exec firefox
+bindsym $mod+F2 exec firefox --incognito
 
 # start file manager
 bindsym $mod+F3 exec urxvt -e ranger
