--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -12,7 +12,7 @@ bindsym $mod+Return exec urxvt
 
 # start web browser
 bindsym $mod+F1 exec firefox
-bindsym $mod+F2 exec firefox --incognito
+bindsym $mod+F2 exec firefox --private-window
 
 # start file manager
 bindsym $mod+F3 exec urxvt -e ranger
