feat: added vim rest console plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim/.vim/pack/my-plugins/start/vim-gitgutter"]
 	path = vim/.vim/pack/my-plugins/start/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "vim/.vim/pack/my-plugins/start/vim-rest-console"]
+	path = vim/.vim/pack/my-plugins/start/vim-rest-console
+	url = https://github.com/diepm/vim-rest-console.git
