feat: moved to mbsync

--- a/email/.config/alot/config
+++ b/email/.config/alot/config
@@ -4,33 +4,22 @@ theme = "solarized_dark"
     [[plup]]
         realname = Plup
         address = plup@plup.io
-        sent_box = maildir:///home/plup/.maildb/Plup/Sent
-        draft_box = maildir:///home/plup/.maildb/Plup/Drafts
+        sent_box = maildir:///home/plup/.maildb/plup/sent
+        draft_box = maildir:///home/plup/.maildb/plup/drafts
         sent_tags = sent,
         sendmail_command = msmtp -a plup -t
     [[happydev]]
         realname = Simon
-        address = simon@happy-dev.fr
-        sent_box = maildir:///home/plup/.maildb/Happydev/Sent
-        draft_box = maildir:///home/plup/.maildb/Happydev/Drafts
+        address = simon@paris.happy-dev.fr
+        sent_box = maildir:///home/plup/.maildb/happydev/sent
+        draft_box = maildir:///home/plup/.maildb/happydev/drafts
         sent_tags = sent,
         sendmail_command = msmtp -a happydev -t
-    [[gmail]]
-        realname = Simon
-        address = rouault.simon@gmail.com
-        sent_box = maildir:///home/plup/.maildb/Gmail/Sent
-        draft_box = maildir:///home/plup/.maildb/Gmail/Drafts
-        sent_tags = sent,
-        sendmail_command = msmtp -a gmail -t
-    [[rouault]]
-        realname = Simon
-        address = simon@rouault.me
-        sent_box = maildir:///home/plup/.maildb/Rouault/Sent
-        draft_box = maildir:///home/plup/.maildb/Rouault/Drafts
-        sent_tags = sent,
-        sendmail_command = msmtp -a rouault -t
 
 [bindings]
+    @ = "shellescape /home/plup/.scripts/checkmail.sh; refresh"
+    [[search]]
+        enter = select; fold *; unfold tag:unread; move last; unfold
     [[thread]]
         w = call hooks.open_in_browser(ui)
 
